--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,44 @@
 /* App.css */
+/* Header styles */
+.header {
+  background-color: #000000; /* Black */
+  padding: 12px 24px;
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+  width: auto;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.5);
+  position: sticky;
+  top: 0;
+  z-index: 100;
+}
+
+.header-content {
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap; /* prevents breaking */
+  gap: 8px;
+}
+
+.logo {
+  height: 50px;
+  width: auto;
+  min-width: 24px;
+}
+
+.logo-wrapper {
+  display: inline-flex;
+  align-items: center;
+}
+
+.company-name {
+  font-size: 17px;
+  font-weight: 1;
+  color: white;
+  font-family: 'MBCorpo Text', sans-serif;
+  white-space: nowrap;
+  margin-left: 8px;
+}
 
 body {
   margin: 0;
@@ -10,6 +50,7 @@ body {
   max-width: 600px;
   margin: 40px auto;
   background-color: white;
+  border-top: 4px solid #0a0a0a;
   border-radius: 8px;
   padding: 24px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
