--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,8 @@
 /* App.css */
 /* Header styles */
 .header {
-  background-color: #000000; /* Black */
+  background-color: #000000;
+  /* Black */
   padding: 12px 24px;
   display: flex;
   /* justify-content: center; */
@@ -16,7 +17,8 @@
 .header-content {
   display: flex;
   align-items: center;
-  flex-wrap: nowrap; /* prevents breaking */
+  flex-wrap: nowrap;
+  /* prevents breaking */
   gap: 8px;
 }
 
@@ -53,47 +55,55 @@
 }
 */
 
-body, html {
+body,
+html {
   height: 100%;
   margin: 0;
-  font-family: Arial, sans-serif;
-  background-color: #f2f4f8;
+  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  background-color: white;
 }
 
 .main-content {
   display: flex;
-  height: calc(100vh - 64px); /* full viewport height minus header height (adjust if needed) */
+  /* full viewport height minus header height (adjust if needed) */
   /* padding: 2rem 4rem; */
-  gap: 2rem;
   background-color: white;
   box-sizing: border-box;
+  flex-wrap: wrap;
+  align-items: flex-start;
 }
 
-.left-side-space, .right-side-space{
-  padding: 1rem;
+.left-side-space,
+.right-side-space {
+  /* padding: 1rem; */
   width: 50%;
+  flex: 1;
 }
 
+.left-side-space{
+  /* border-right: 1px solid #ccc;  */
+}
 .left-side,
 .right-side {
   flex: 1;
   display: flex;
   flex-direction: column;
-  overflow-y: auto;
   border-radius: 8px;
-  padding: 24px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  /* padding: 24px; */
+  margin: 3rem;
   background-color: #fff;
 }
 
-.left-side{
-  margin: 3rem;
+
+.left-side {
   padding: 0;
-  /* height: auto; */
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  /* height: 100%; */
 }
 
 .right-side {
   /* max-width: 480px; */
+  /* box-shadow: none; */
 }
 
 .average-rating-container {
@@ -149,7 +159,7 @@ form {
 }
 
 .feedback-item {
-  background-color: #fafafa;
+  background-color: white;
   border: 1px solid #e1e4e8;
   border-radius: 6px;
   padding: 16px;
@@ -194,5 +204,16 @@ button {
 
 button:hover {
   background-color: #1f6391;
-}   
+}
 
+/* Optional: make column layout on smaller screens */
+@media screen and (max-width: 768px) {
+  .main-content {
+    flex-direction: column;
+  }
+
+  .left-side-space,
+  .right-side-space {
+    width: 100%;
+  }
+}
