--- a/frontend/src/FeedBackForm/FeedbackList.css
+++ b/frontend/src/FeedBackForm/FeedbackList.css
@@ -141,3 +141,43 @@
   background-color: none;
   font-size: 0.9rem;
 }
+
+.export-btn {
+  background-color: white;
+  border: none;
+  color: black;
+  padding: 6px 12px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: 500;
+  font-size: 0.875rem;
+  user-select: none;
+  line-height: 1.25rem;
+  gap: 0.5rem;
+  border-width: 1px;
+  border-color: #e1e4e8;
+  border-style: solid;
+}
+
+.export-btn:hover {
+  background-color: rgb(245, 245, 245);
+
+}
+
+.dropdown-item{
+  display: flex;
+  justify-content: left;
+  color: #000;
+  font-size: 0.8rem;
+  background: white;
+}
+
+.dropdown-item svg{
+  width: 1rem;
+  height: 1rem;
+  margin-right: 0.5rem;
+}
+
+.dropdown-item:hover {
+  background: rgb(245, 245, 245);
+}
