--- a/frontend/src/FeedBackForm/FeedbackList.css
+++ b/frontend/src/FeedBackForm/FeedbackList.css
@@ -2,10 +2,10 @@
   flex: 1;
 }
 
-.avg-box, .latest-box {
+.avg-box,
+.latest-box {
   background-color: #fff;
   border-radius: 8px;
-  /* padding: 16px; */
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   margin-bottom: 20px;
 }
@@ -26,42 +26,41 @@
 
 .avg-box-heading {
   display: flex;
-  align-items: center; 
+  align-items: center;
   gap: 8px;
   font-weight: 10;
   padding: 1.2rem;
   background-color: rgb(245, 245, 245);
   border: 0.5px solid #e1e4e8;
-  /* border-style: solid; */
 }
 
 .avg-box-heading h2 {
-    font-size: 1.2rem;
-    font-weight: 600;
+  font-size: 1.2rem;
+  font-weight: 600;
 }
 
 .avg-box-heading svg {
   color: rgb(53, 52, 52);
 }
 
-.avg-box-text{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 1.2rem;
-    border: 0.5px solid #e1e4e8;
+.avg-box-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 1.2rem;
+  border: 0.5px solid #e1e4e8;
 }
 
-.avg-box-rating{
-    font-size: 2rem;
-    font-weight: 700
+.avg-box-rating {
+  font-size: 2rem;
+  font-weight: 700
 }
 
-.avg-box-rating-text{
-    font-size: 1rem;
-    font-weight: 500;
-    color: rgb(53, 52, 52);
+.avg-box-rating-text {
+  font-size: 1rem;
+  font-weight: 500;
+  color: rgb(53, 52, 52);
 }
 
 .feedbacks-container {
@@ -72,9 +71,9 @@
   border-radius: 8px;
 }
 
-.all-feedbacks-heading{
+.all-feedbacks-heading {
   display: flex;
-  align-items: center; 
+  align-items: center;
   gap: 8px;
   font-weight: 10;
   padding: 1.2rem;
@@ -83,22 +82,21 @@
 }
 
 .all-feedbacks-heading h3 {
-    font-size: 1.2rem;
-    font-weight: 600;
+  font-size: 1.2rem;
+  font-weight: 600;
 }
 
 .feedback-item {
   border-radius: 8px;
   padding: 16px;
-  /* box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); */
 }
 
-.feedback-item-header{
+.feedback-item-header {
   display: flex;
-  
+
 }
 
-.all-feedbacks-body{
+.all-feedbacks-body {
   padding: 1.2rem;
   display: flex;
   flex-direction: column;
@@ -119,24 +117,44 @@
   font-size: .75rem;
 }
 
-.rating-1 { background-color: #e74c3c; }    /* red */
-.rating-2 { background-color: #e67e22; }    /* orange */
-.rating-3 { background-color: #f1c40f; }    /* yellow */
-.rating-4 { background-color: #3498db; }   /* blue */
-.rating-5 { background-color: #2ecc71;}     /* green */
+.rating-1 {
+  background-color: #e74c3c;
+}
+
+/* red */
+.rating-2 {
+  background-color: #e67e22;
+}
+
+/* orange */
+.rating-3 {
+  background-color: #f1c40f;
+}
+
+/* yellow */
+.rating-4 {
+  background-color: #3498db;
+}
+
+/* blue */
+.rating-5 {
+  background-color: #2ecc71;
+}
+
+/* green */
 
 .rating-icon svg {
   width: 0.65rem;
   height: 0.65rem;
 }
 
-.rating-icon-date{
+.rating-icon-date {
   margin-left: 0.5rem;
   font-size: .75rem;
   color: #555;
 }
 
-.feedback-item-text{
+.feedback-item-text {
   margin: 0.5rem 0;
   background-color: none;
   font-size: 0.9rem;
@@ -164,7 +182,7 @@
 
 }
 
-.dropdown-item{
+.dropdown-item {
   display: flex;
   justify-content: left;
   color: #000;
@@ -172,7 +190,7 @@
   background: white;
 }
 
-.dropdown-item svg{
+.dropdown-item svg {
   width: 1rem;
   height: 1rem;
   margin-right: 0.5rem;
